Déplacements fichiers et début gestionnaires de media
